// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

option go_package = "entgo.io/bug/ent/proto/entpb";

message Pet {
  int32 id = 1;

  User owner = 2;
}

message CreatePetRequest {
  Pet pet = 1;
}

message GetPetRequest {
  int32 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdatePetRequest {
  Pet pet = 1;
}

message DeletePetRequest {
  int32 id = 1;
}

message ListPetRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListPetResponse {
  repeated Pet pet_list = 1;

  string next_page_token = 2;
}

message User {
  int32 id = 1;

  int32 age = 2;

  string name = 3;

  Pet pet = 4;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message ListUserRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

service PetService {
  rpc Create ( CreatePetRequest ) returns ( Pet );

  rpc Get ( GetPetRequest ) returns ( Pet );

  rpc Update ( UpdatePetRequest ) returns ( Pet );

  rpc Delete ( DeletePetRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListPetRequest ) returns ( ListPetResponse );
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserRequest ) returns ( ListUserResponse );
}
